// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H6 Element applies lightWeight modifier 1`] = `
<h1
  className="sc-bdVaJa gNceKw"
>
  Header Element
</h1>
`;

exports[`H6 Element renders correctly 1`] = `
<h1
  className="sc-bdVaJa bmfcQW"
>
  Header Element
</h1>
`;
